# IPP

./: .gitignore  .pre-commit-config.yaml  .releaserc  CHANGELOG.md  LICENSE  Makefile  README  README.md  chainToTbl.py  classify_conservation.R  download_ipp_data  enhancers.mm39.bed  functions.py  functions_genomic_coordinate_projection.py  ipp.cpp  ipp.h  ippmodule.cpp  merge_liftover_and_ipp.py  pickle_to_bin.py  project.py  project_dijkstra.py  project_grb.sh  project_regions  pyproject.toml  setup.py  shrink_pickle.py  species_ipp.txt
.github/: CODEOWNERS
.github/scripts/: edit-version.sh
.github/workflows/: ci-cd.yaml  release.yml
compute_alignments/: Snakefile  chainToTbl.py  collect_pwalns.py  compute_pairwise_alignments  compute_pairwise_alignments.sh  create_dummy_data.py  pickle_pwalns.py  remove_species_prefix
compute_pwalns/: Snakefile  axtnet_to_tbl.R  chainToTbl.py  collect_pwalns.py  compute_pairwise_alignments  pickle_pwalns.py  remove_species_prefix
cpp/include/: ipp.h
cpp/src/: ipp.cpp  ippmodule.cpp
data/: dummy_regions.bed  species_test.txt
src/IPP.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/ipp/: __init__.py  project.py
tests/: test_alignments.sh  test_project.py
